--- a/ACT_Report/main.tex
+++ b/ACT_Report/main.tex
@@ -8,6 +8,8 @@
 \usepackage{amssymb,amsmath,color,psfrag}
 \usepackage[draft]{graphicx}
 \usepackage{cite}
+\usepackage{url}
+\usepackage{hyperref}
 
 
 \begin{document}
@@ -30,7 +32,7 @@ introduction pages and bibliography.
 
 The project deals with the design and implementation of a distributed
 optimization algorithm in order to solve a Supervised Learning (SL) problem using a multinomial logistic regression.
-It will use a communication 
+It will use the common used message-passing so called MPI. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -57,7 +59,7 @@ First-chapter for problem set-up and description of the implemented solution.
 \section{Subgradient Method}
 \subsection {Multinomial Logistic Regression}
 
-Citation \cite{MR-GB:11}
+Citation \cite{CITATION:1}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%% CAPITOLO  %%%%%%%%%%%%%%%%
@@ -68,7 +70,7 @@ applicable).
 \section{Section title}
 \subsection {Subsection title}
 
-Citation \cite{MR-GB:11}
+Citation \cite{CITATION:2}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -85,7 +87,7 @@ Citation \cite{MR-GB:11}
 
 %%%%%%%%%% BIBLIOGRAPHY %%%%%%%%%%%%%%
 \bibliography{bibliography}{}
-\bibliographystyle{plain}
+\bibliographystyle{plain}	
 \addcontentsline{toc}{chapter}{Bibliography}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
