--- a/ACT_Report/main.tex
+++ b/ACT_Report/main.tex
@@ -13,6 +13,9 @@
 \usepackage{algorithm}
 \usepackage{algorithmicx}
 \usepackage{algpseudocode}
+\usepackage{tabularx}
+
+
 
 
 \begin{document}
@@ -74,8 +77,7 @@ x^i\left(k+1\right) = \sum_{j=1}^{m}{a_j^i\left(k\right)x^i\left(k\right)-a^i\le
 where $\alpha^i(k)>0$ is the (diminishing) stepsize used by agent $i$ and the vector $d_i(k)$ is a subgradient of agent $i$ objective function $f_i(x)$ at $x=x^i(k)$. \cite{CITATION:1}
 
 \subsection {Multinomial Logistic Regression} \label{Subsec1.1.2}
-The problem to be solved is a Supervised Learning problem called Multinomial Logistic Regression, also known as Softmax Regression, and it generalizes the more common Logistic Regression. The difference between them is that in the latter there are several classes to be considered, in the matter, there are only two classes (or equivalently a binary class). \\
-
+The problem to be solved is a Supervised Learning problem called Multinomial Logistic Regression, also known as Softmax Regression, and it generalizes the more common Logistic Regression. The difference between them is that in the latter there are several classes to be considered, in the matter, there are only two classes (or equivalently a binary class).\\
 The problem to be solved is to find a set of coefficients based on a given dataset to predict the belonging class for an unseen set of features, while minimizing a cost function. The dataset is composed of \textit{N} labelled examples $\{(x^{(1)}, y^{(1)}), ..., (x^{(N)}, y^{(N)})\}$. Each $x^{(i)} \in R^{d_{x}}$ for $i=1, ..., N$ is composed of some features which represent the value upon which we base the estimation of the belonging class, while $y^{(i)} \in R^{d_{y}}$ is the belonging class for the \textit{i-th} example, and can be a values in $\{1, ..., K\}$.
 
 Given a single training example $(x^{(i)}, y^{(i)})$, the definition of the cost function is:
@@ -103,7 +105,7 @@ with
 \begin{equation}
 g_i\left(\theta\right):=\sum_{k=1}^{K}{1\{y^{(i)}=e_k\}\log{\left( \frac{exp(\theta^{(k)^\top}x^{(i)})}{\sum_{k=1}^{K}{exp( \theta^{(j)^\top}x )}} \right)}}
 \end{equation}
-where \textbf{1\{$\cdot$\}} being the \textit{indicator function}.
+where \textbf{1\{$\cdot$\}} being the \textit{indicator function}.\cite{CITATION:2}
 
 \subsection {Pseudocode} \label{Subsec1.1.3}
 \begin{algorithm}
@@ -137,12 +139,79 @@ where \textbf{1\{$\cdot$\}} being the \textit{indicator function}.
 %%%%%%%%% CAPITOLO  %%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Chapter 2 Results of simulations} \label{Cap2}
-Second chapter for description of the results (simulations and experiments where
-applicable).
+The software described in the previous chapter was used to solve a Multinomial Logistic Regression problem. Specifically, we classified the data of the Iris Dataset.
 
+\section{Dataset, graph description and minimization function} \label{Sec2.1}
+This dataset is composed of 150 instances, 120 used for training, the rest for tests.\\
+The instances contain 3 classes, each representing a type of Iris flower. Every instance has 4 features, sepal length, sepal width, petal length, petal width expressed in $cm$.\\
+We tried different types of graphs. These graphs are all strongly connected and the weight matrices for the nodes are doubly stochastic, as per the assumptions of convergence of the algorithm described in Chapter \ref{Cap1}.\\
+The results discussed in this chapter, if not differently noted, refer to cyclic graphs with a variable number of nodes.\\
+The program can minimize all kinds of loss functions. As shown in Chapter \ref{Sec1.2}, the quadratic and exponential functions can also be used. These last 2 functions don't guarantee useful results and/or convergence. The minimization function used in this chapter is the one described in Chapter \ref{Subsec1.1.2}, softmax.
 
+\section{Performance} \label{Sec2.2}
+There are some key factors that influence \textit{the computational time}, \textit{the numbers of iterations necessary} and \textit{the accuracy of the results}.\\
 
-Citation \cite{CITATION:2}
+\subsection{Number of nodes} \label{Subsec2.2.1}
+The Python program, thanks to the MPI platform, is capable of running on an arbitrary number of nodes. It was tested on as little as 2 nodes to as many as 60 nodes, which means that every node was processing the data of 2 instances (120 instances divided into 60 nodes). The best performances are obtained when the number of nodes corresponds to the number of physical cores of the machine where it runs. When the number of nodes exceeds greatly the number of physical cores, the resources are oversubscribed. In this case, the performances degrade notably as the nodes compete for cache and memory and the processors' schedulers are put in a difficult situation. On a 4-core test machine, a computation with 5000 iterations and 30 nodes is done in 5 minutes. The same machine can do the same number of iterations, but with 60 nodes, in 15 minutes. Therefore, the following tests will be shown on a 4 nodes setup. \\
+
+\subsection{Epsilon} \label{Subsec2.2.2}
+This is a small constant used as stop condition. If the result of the current calculation differs less than epsilon from the previous, the algorithm is stopped.
+
+\subsection{Learning rate} \label{Subsec2.2.3}
+
+\subsection{Fixed step-size} \label{Subsec2.2.4}
+The step-size alpha plays a big role in the speed of convergence of the algorithm. There are 3 kinds of step-size. Fixed, diminishing and adaptive (Armijo). For reasons not discussed in this paper, it's not possible to use Armijo rule in a distributed problem. We will first deal with a simpler fixed step-size. With an epsilon equal to 0.001 (10-3):\\
+\begin{tabularx}{\textwidth}{|X|X|X|X|}
+%{\begin{tabular}{|c|c|c|c|}
+\hline
+\textbf{Value of fixed step-size} & \textbf{Iteration required} & \textbf{Execution time in s} & \textbf{Wrong guesses o.30}\\
+\hline
+0.5 & Not converging & & \\
+\hline
+0.1 & $>$50000 & $>$80 & 1\\
+\hline
+0.05 & $>$50000 & $>$80 & 1\\
+\hline
+0.01 & 2000 & 3 & 1\\
+\hline
+0.005 & 1600 & 2.4 & 1\\
+\hline
+0.001 & 2000 & 3.2 & 0\\
+\hline
+0.0005 & 1600 & 2.4 & 2\\
+\hline
+0.0001 & 500 & 0.8 & 13\\
+\hline
+\end{tabularx}
+%\end{tabular}
+\\ \\
+These results show a general truth about the step-size. If it is too little the learning process proceeds in a very slow way and it requires a huge amount of iterations. If the learning rate is too high and the gradient descent most probably will overshoot the minimum and not converges. Through trial and error, the step-size 0.001 was identified which allow reaching good performance and accuracy. In fact, in only 2.6 seconds, we can make predictions with no errors, using our 30 instances test dataset.
+
+\subsection{Diminishing step-size} \label{Subsec2.2.5}
+The diminishing step-size implemented in the code is in this form:\\
+%\begin{equation}
+%\alpha = const \dot \left( \frac{1}{tt} \right) exp(MATLAB)
+%\end{equation}
+Again, several tests were run by tweaking the constant and the exponent.\\ \\
+\begin{tabularx}{\textwidth}{|X|X|X|X|X|}
+\hline
+\textbf{Alpha\_const} & \textbf{Alpha\_exp} & \textbf{Iteration required} & \textbf{Execution time in s} & \textbf{Wrong guesses o. 30}\\
+\hline
+1 & 0.01 & 96 & 0.14 & 13\\
+\hline
+1 & 0.1 & 132 & 0.25 & 1\\
+\hline
+0.1 & 0.01 & 1300 & 1.9 & 1\\
+\hline
+0.1 & 0.1 & $>$50000 & $>$80 & 1\\
+\hline
+0.01 & 0.01 & 1900 & 3.2 & 1\\
+\hline
+0.01 & 0.1 & $>$50000 & $>$80 & 1\\
+\hline
+\end{tabularx}
+\\ \\
+\noindent The best result is obtained in only 132 iterations, with 1 and 0.1 as constant and exponent respectively. This is done in roughly a quarter of a second, obtaining only one error. The accuracy is worst then the previous result, but this is obtained in a fraction of the time needed to obtain 0 error with a fixed step-size. A difference of 2 or 3 seconds may not matter using the Iris Dataset, with a small amount of calculations. In a setup where a bigger number of calculations and bigger dataset are involved, one may prefer this slightly less accurate but faster approach. This graphs show the difference of the value calculated with the distributed algorithm and the...
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
